--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -75,13 +75,13 @@
         app:layout_constraintTop_toBottomOf="@+id/emailLoginTxt" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/loginButtom"
+        android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:background="@drawable/ic_buttom"
+        android:background="@drawable/ic_button"
         android:hint="@string/login"
         android:text="@string/login"
         android:textColor="@color/white"
