--- a/app/src/main/res/drawable/ic_button.xml
+++ b/app/src/main/res/drawable/ic_button.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
-        android:startColor="#CDDC39"
-        android:endColor="#ff1ad4bd"/>
+        android:startColor="#95AFF1"
+        android:endColor="#95AFF1"/>
 
     <corners android:radius= "50dp" />
 </shape>
