agregado de icono telefonico

--- a/app/src/main/res/layout/registro_fragment.xml
+++ b/app/src/main/res/layout/registro_fragment.xml
@@ -83,10 +83,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/ic_field"
-        android:drawableStart="@drawable/ic_user_action_name"
+        android:drawableStart="@drawable/ic_phone3_action_name"
         android:drawablePadding="16dp"
         android:ems="10"
-        android:hint="@string/userName"
+        android:hint="@string/telefono"
         android:inputType="phone"
         android:padding="16dp"
         app:layout_constraintBottom_toTopOf="@+id/emailRegistroTxt"
