agregado de checkEmail y correciones. Falta mejorar y ver con el profe

--- a/app/src/main/res/layout/registro_v2_fragment.xml
+++ b/app/src/main/res/layout/registro_v2_fragment.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout2"
+    android:id="@+id/frameLayout8"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.RegistroFragment">
+    tools:context=".fragments.RegistroV2Fragment">
 
     <ImageView
         android:id="@+id/imgLogo"
@@ -151,4 +151,3 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
