--- a/app/src/main/res/layout/check_email_fragment.xml
+++ b/app/src/main/res/layout/check_email_fragment.xml
@@ -17,16 +17,16 @@ app:layout_constraintStart_toStartOf="parent"
 app:layout_constraintTop_toTopOf="parent">
 
 
-<TextView
-    android:id="@+id/verificacionTitulo"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp"
-    android:gravity="center"
-    android:textColor="@color/black"
-    android:text="@string/title_check_email"
-    android:textSize="24sp" />
+    <TextView
+        android:id="@+id/verificacionTitulo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:gravity="center"
+        android:text="@string/title_check_email"
+        android:textColor="@color/teal_700"
+        android:textSize="24sp" />
 
 <TextView
     android:id="@+id/verificacionTexto"
