--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="24dp"
         android:gravity="center"
         android:text="@string/titulo_login"
-        android:textColor="@color/black"
+        android:textColor="@color/teal_700"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/emailLoginTxt"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,13 +51,13 @@
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:padding="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/passwordLognTxt"
+        app:layout_constraintBottom_toTopOf="@+id/passwordLoginTxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginTitle" />
 
     <EditText
-        android:id="@+id/passwordLognTxt"
+        android:id="@+id/passwordLoginTxt"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
@@ -87,7 +87,7 @@
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordLognTxt" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordLoginTxt" />
 
     <TextView
         android:id="@+id/recovery_password"
