--- a/app/src/main/res/navigation/navgraph.xml
+++ b/app/src/main/res/navigation/navgraph.xml
@@ -3,25 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navgraph"
-    app:startDestination="@id/before2Fragment">
-
+    app:startDestination="@id/loginV2Fragment">
     <fragment
-        android:id="@+id/registroFragment"
-        android:name="com.ejercicios.formulariologin.fragments.RegistroFragment"
-        android:label="registro_fragment"
-        tools:layout="@layout/registro_fragment" >
+        android:id="@+id/loginV2Fragment"
+        android:name="com.ejercicios.formulariologin.fragments.LoginV2Fragment"
+        android:label="login_v2_fragment"
+        tools:layout="@layout/login_v2_fragment" >
         <action
-            android:id="@+id/action_registroFragment_to_homeFragment"
+            android:id="@+id/action_loginV2Fragment_to_registroV2Fragment"
+            app:destination="@id/registroV2Fragment" />
+        <action
+            android:id="@+id/action_loginV2Fragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_loginV2Fragment_to_checkEmailFragment"
+            app:destination="@id/checkEmailFragment" />
     </fragment>
     <fragment
-        android:id="@+id/loginFragment"
-        android:name="com.ejercicios.formulariologin.fragments.LoginFragment"
-        android:label="login_fragment"
-        tools:layout="@layout/login_fragment" >
+        android:id="@+id/registroV2Fragment"
+        android:name="com.ejercicios.formulariologin.fragments.RegistroV2Fragment"
+        android:label="registro_v2_fragment"
+        tools:layout="@layout/registro_v2_fragment" >
         <action
-            android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            android:id="@+id/action_registroV2Fragment_to_loginV2Fragment"
+            app:destination="@id/loginV2Fragment" />
+        <action
+            android:id="@+id/action_registroV2Fragment_to_checkEmailFragment"
+            app:destination="@id/checkEmailFragment" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
@@ -29,15 +37,12 @@
         android:label="home_fragment"
         tools:layout="@layout/home_fragment" />
     <fragment
-        android:id="@+id/before2Fragment"
-        android:name="com.ejercicios.formulariologin.fragments.Before2Fragment"
-        android:label="before2_fragment"
-        tools:layout="@layout/before2_fragment">
+        android:id="@+id/checkEmailFragment"
+        android:name="com.ejercicios.formulariologin.fragments.CheckEmailFragment"
+        android:label="check_email_fragment"
+        tools:layout="@layout/check_email_fragment" >
         <action
-            android:id="@+id/action_before2Fragment_to_registroFragment"
-            app:destination="@id/registroFragment" />
-        <action
-            android:id="@+id/action_before2Fragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            android:id="@+id/action_checkEmailFragment_to_loginV2Fragment"
+            app:destination="@id/loginV2Fragment" />
     </fragment>
 </navigation>
